--- a/EyYo/Base.lproj/Main.storyboard
+++ b/EyYo/Base.lproj/Main.storyboard
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,11 +14,14 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jK2-qG-sp6"/>
+                        <viewControllerLayoutGuide type="bottom" id="Sqm-PH-H7E"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <segue destination="p7K-Lh-e0r" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="9BH-A6-Y0W"/>
@@ -33,26 +36,85 @@
         <scene sceneID="lCt-w0-P74">
             <objects>
                 <viewController id="p7K-Lh-e0r" customClass="ChannelVC" customModule="EyYo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5Nc-VI-oiX">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="V5q-Gc-kkn"/>
+                        <viewControllerLayoutGuide type="bottom" id="oyk-zr-vel"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5Nc-VI-oiX" customClass="GradientView" customModule="EyYo" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EyYo!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tep-YL-LzF">
+                                <rect key="frame" x="16" y="44" width="45" height="21"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHANNELLS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7h-9D-Ndi">
+                                <rect key="frame" x="16" y="85" width="71" height="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5vj-Dv-OJP">
+                                <rect key="frame" x="281" y="81.5" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="ciz-XV-LxS">
+                                <rect key="frame" x="16" y="572" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="Fka-rs-9hD"/>
+                                    <constraint firstAttribute="width" constant="75" id="XEj-TW-3HS"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="B2h-0j-GCI">
+                                <rect key="frame" x="0.0" y="123.5" width="375" height="428.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cq3-8A-4Us">
+                                <rect key="frame" x="111" y="593" width="46" height="33"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="gFK-ot-zPu"/>
+                        <constraints>
+                            <constraint firstItem="tep-YL-LzF" firstAttribute="leading" secondItem="5Nc-VI-oiX" secondAttribute="leadingMargin" id="5kY-X6-EhG"/>
+                            <constraint firstItem="cq3-8A-4Us" firstAttribute="leading" secondItem="ciz-XV-LxS" secondAttribute="trailing" constant="20" id="7jD-7O-XWK"/>
+                            <constraint firstItem="oyk-zr-vel" firstAttribute="top" secondItem="ciz-XV-LxS" secondAttribute="bottom" constant="20" id="9UM-Ua-P4g"/>
+                            <constraint firstItem="ciz-XV-LxS" firstAttribute="top" secondItem="B2h-0j-GCI" secondAttribute="bottom" constant="20" id="BI0-E6-Nli"/>
+                            <constraint firstItem="cq3-8A-4Us" firstAttribute="centerY" secondItem="ciz-XV-LxS" secondAttribute="centerY" id="DGp-86-ATa"/>
+                            <constraint firstItem="x7h-9D-Ndi" firstAttribute="top" secondItem="tep-YL-LzF" secondAttribute="bottom" constant="20" id="KSO-qV-bg5"/>
+                            <constraint firstItem="tep-YL-LzF" firstAttribute="top" secondItem="V5q-Gc-kkn" secondAttribute="bottom" constant="24" id="M4I-k4-JfA"/>
+                            <constraint firstAttribute="trailing" secondItem="B2h-0j-GCI" secondAttribute="trailing" id="O5z-tP-sAc"/>
+                            <constraint firstItem="ciz-XV-LxS" firstAttribute="leading" secondItem="5Nc-VI-oiX" secondAttribute="leadingMargin" id="VFt-gI-ebP"/>
+                            <constraint firstItem="x7h-9D-Ndi" firstAttribute="leading" secondItem="5Nc-VI-oiX" secondAttribute="leadingMargin" id="a62-S7-R3J"/>
+                            <constraint firstItem="B2h-0j-GCI" firstAttribute="leading" secondItem="5Nc-VI-oiX" secondAttribute="leading" id="coR-PD-rHS"/>
+                            <constraint firstItem="5vj-Dv-OJP" firstAttribute="centerY" secondItem="x7h-9D-Ndi" secondAttribute="centerY" id="fdY-qe-b6z"/>
+                            <constraint firstAttribute="trailing" secondItem="5vj-Dv-OJP" secondAttribute="trailing" constant="72" id="tfZ-PZ-u98"/>
+                            <constraint firstItem="B2h-0j-GCI" firstAttribute="top" secondItem="5vj-Dv-OJP" secondAttribute="bottom" constant="20" id="u0n-rw-hsP"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="15b-c7-uwh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="953" y="-335"/>
+            <point key="canvasLocation" x="952.79999999999995" y="-335.08245877061472"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="7qr-7O-a2u">
             <objects>
                 <viewController id="Nxp-hL-Ln8" customClass="ChatVC" customModule="EyYo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Js4-FL-PQJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="xbd-pc-XpK"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="zKZ-tf-Zf0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hx4-VL-xq7">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hx4-VL-xq7" customClass="GradientView" customModule="EyYo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="77"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EyYo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HW6-hY-wsd">
@@ -82,14 +144,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hx4-VL-xq7" firstAttribute="top" secondItem="d0d-mN-Gyg" secondAttribute="top" id="3dd-Rk-Ite"/>
-                            <constraint firstItem="hx4-VL-xq7" firstAttribute="trailing" secondItem="d0d-mN-Gyg" secondAttribute="trailing" id="BNb-y5-eJi"/>
-                            <constraint firstItem="hx4-VL-xq7" firstAttribute="leading" secondItem="d0d-mN-Gyg" secondAttribute="leading" id="ELk-rz-CmF"/>
+                            <constraint firstItem="hx4-VL-xq7" firstAttribute="top" secondItem="Js4-FL-PQJ" secondAttribute="bottom" id="3dd-Rk-Ite"/>
+                            <constraint firstItem="hx4-VL-xq7" firstAttribute="trailing" secondItem="zKZ-tf-Zf0" secondAttribute="trailing" id="BNb-y5-eJi"/>
+                            <constraint firstItem="hx4-VL-xq7" firstAttribute="leading" secondItem="zKZ-tf-Zf0" secondAttribute="leading" id="ELk-rz-CmF"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="d0d-mN-Gyg"/>
                     </view>
                     <connections>
-                        <outlet property="menuBtn" destination="FyQ-IL-hRO" id="BEa-35-jjs"/>
+                        <outlet property="menuBtn" destination="FyQ-IL-hRO" id="PLz-c8-3fL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kDo-MG-pNB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -98,6 +159,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
+        <image name="menuProfileIcon" width="99" height="99"/>
         <image name="smackBurger" width="40" height="40"/>
     </resources>
 </document>
